# tinyrocket

./: .gitignore  CMakeLists.txt  Makefile  README.md  background.cpp  background.h  camera.cpp  camera.h  gameobject.cpp  gameobject.h  main.cpp
assets/: image.py
